--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.css">  
+    <link rel="stylesheet" href="./css/main.css">   
+    <link rel="icon" type="image/png" href="https://cdn.iconscout.com/icon/free/png-256/google-152-189813.png" sizes="16x16">
+
     <title>Google Clone</title>
     
 </head>
